[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-profiling-agent"
version = "0.0.0"
description = "🔬 An AI agent which focus on doing profiling of test part in a project."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Chisanan232/Test-Profiling-Agent"
Repository = "https://github.com/Chisanan232/Test-Profiling-Agent"
Document = "https://chisanan232.github.io/test-profiling-agent"
Milestones = "https://github.com/Chisanan232/Test-Profiling-Agent/milestones"
Planning-Management = "https://app.clickup.com/9018752317/v/f/901812942800/90184991515"
Project-Management = "https://github.com/users/Chisanan232/projects/15/views/1?template_dialog_tab=featured&system_template=kanban"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<10",
    "pytest-cov>=5.0.0,<8",
    "coverage~=7.10",
    "pytest-rerunfailures>=14.0,<17",
    "aiohttp>=3.12.13",
    "pytest-asyncio>=0.23.0,<2",
    "python-dotenv>=1.0.1,<2",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<5",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["src/"]
packages = ["src"]
#artifacts = ["slack_mcp/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
packages = ["src"]
#artifacts = ["slack_mcp/py.typed"]
